# SoundShareServer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SoundShareServer.slnx  TECHNICAL_CONTEXT.md  vcpkg.json
SoundShareClient/: SoundShareClient.vcxproj  SoundShareClient.vcxproj.filters  main.cpp  ring_buffer.h  wasapi_render.cpp  wasapi_render.h  ws_client.cpp  ws_client.h
SoundShareServer/: SoundShareServer.vcxproj  SoundShareServer.vcxproj.filters  embedded_page.h  http_server.cpp  http_server.h  main.cpp  wasapi_capture.cpp  wasapi_capture.h
